Just testing commits with Webstorm. Added a little more code.

--- a/index .html
+++ b/index .html
@@ -4,6 +4,7 @@
 		<title>This is the header</title>
 	</head>
 	<body>
-		<p>This is the first scentence</p>
+		<p>This is the first sentence.</p>
+		<h1>And this is a second sentence.</h1>
 	</body>
 </html>
